--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,12 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Acceso Denegado</title>
-</head>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>12AuthApp</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>@font-face{font-family:Poppins-Regular;src:url(Poppins-Regular.4dae410f5b6accf6.ttf)}@font-face{font-family:Poppins-Bold;src:url(Poppins-Bold.01059139c680e2e8.ttf)}*{margin:0;padding:0;box-sizing:border-box;font-family:Poppins-Bold}body,html{height:100%;font-family:Poppins-Regular,sans-serif}</style><link rel="stylesheet" href="styles.d88754c13c204ec0.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.d88754c13c204ec0.css"></noscript></head>
 <body>
-    <h1>Acceso denegago</h1>
-    <hr>
-</body>
-</html>
+  <app-root></app-root>
+<script src="runtime.584e9199fffab800.js" type="module"></script><script src="polyfills.ca923061f4465f8a.js" type="module"></script><script src="main.230b1bd849833ddc.js" type="module"></script>
+
+</body></html>
